--- a/style.css
+++ b/style.css
@@ -21,23 +21,22 @@ table{
   overflow: hidden;
 }
 .main tr:hover{
-    background-color: #83ece3;
+    background-color: #f3ece3;
 }
 .main td{
  border: 1px solid #6091d3 ; 
     text-align: center;
-    width: 45px;
-    height: 45px;
+    font-size:30px;
+    width: 50px;
+    height: 50px;
     position: relative;
 }
 .main td:hover {
-    background-color: #83ece3;
-    padding: 0px;
-    margin: 0px;
+    background-color: #f3ece3;
   }
   .main td:hover:after {
     content: "";
-    background-color: #83ece3;
+    background-color: #f3ece3;
     width: 100%;
     height: 200vh;
     position: absolute;
@@ -46,11 +45,8 @@ table{
     z-index: -1;
   }
 .select td:hover, .box div:hover{
-    background: #83ece3;
+    background: #f3ece3;
     cursor: pointer;
-}
-img{
-    width: 45px;
 }
 .main tr:first-child td{
     border-top: 4px solid #6091d3;
@@ -67,6 +63,8 @@ img{
 .box{
     margin-top: 10px;
     display: flex;
+    margin-left: 100px;
+    margin-right: 100px;
 }
 .select{
     margin-top: 20px;
@@ -75,14 +73,22 @@ img{
     border: 2px #6091d3 solid;
     text-align: center;
     font-size:30px;
-    width: 45px;
+    width: 50px;
     height: 45px;
 }
 .mainClick{
-    background-color: #83ece3;
+    background-color: #f3ece3;
+}
+.remove{
+    margin: 0 0 0 auto;
+    border: 2px #6091d3 solid;
+    border-radius: 10px;
+    text-align: center;
+    font-size:30px;
+    width: 100px;
+    height: 45px;
 }
 .check{
-    margin: auto;
     border: 2px #6091d3 solid;
     border-radius: 10px;
     text-align: center;
@@ -90,6 +96,6 @@ img{
     width: 200px;
     height: 45px;
 }
-.name label{
-    text-orientation: upright;
+img{
+    width:37px;
 }
